--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Homework 11</title>
+    <link rel="stylesheet" href="./css/common.css">
   </head>
   <body>
     
@@ -20,7 +21,7 @@
 
     <div class="gallery"></div>
 
-    <button type="button" class="btn btn-load js-load-btn">Load more</button>
+    <button type="button" class="btn btn-load btn-load--invisible">Load more</button>
 
     <script src="index.js" type="module"></script>
   </body>
